Made the Animation class instantiable and improved test coverage.